测试提交_sora_4: 优化了时间与对话系统，接下来的目标是实现基于时间系统的任务板信息，以及可以进行交互的UI背包（类泰拉瑞亚），时钟要采用老式时钟形式，两个UI都可以进行直接的点击交互

--- a/ECS-史莱姆法师-索拉/resource/translation/Translation.csv
+++ b/ECS-史莱姆法师-索拉/resource/translation/Translation.csv
@@ -1,7 +1,6 @@
-keys,en,es,zh_CN,ja
-Greet,"Hello, friend!","Hola, amigo!",你好啊,こんにちは
-Ask,How are you?,Cómo está?,过得如何,元気ですか
-Bye,Goodbye,Adiós,再见,さようなら
-Quote,"""Hello"" said the man.","""Hola"" dijo el hombre.",这个男人说你好,「こんにちは」男は言いました
-StartGame,Game Start,Start!!!,开始游戏,ab
-QuitGame,Game Quit,Quit!!!,退出游戏,bc
+keys,en,zh_CN
+StartGame,Game Start,开始游戏
+QuitGame,Game Quit,退出游戏
+GameSetting,Game Setting,游戏设置
+Windowed,Windowed,窗口化
+Fullscreen,Fullscreen,全屏
